--- a/modules/xerte/parent_templates/Nottingham/models_html5/dictation.html
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/dictation.html
@@ -18,10 +18,6 @@
 	 * limitations under the License.
 	 */
 
-	//The number of correct answers
-	var answers = 0;
-	//The total number of questions answered
-	var total = 0;
 	// pageChanged & sizeChanged functions are needed in every model file
 	// other functions for model should also be in here to avoid conflicts
 	var dictation = new function() {
@@ -29,6 +25,10 @@
 				showBtnTxt,
 				nextBtnTxt,
 				restartBtnTxt;
+		//The number of correct answers
+		var answers = 0;
+		//The total number of questions answered
+		var total = 0;
 
 		// function called every time the page is viewed after it has initially loaded
 		this.pageChanged = function() {
@@ -91,6 +91,7 @@
 						label:	showBtnTxt
 					})
 					.click(function() {
+						var feedback = [];
 						var $this = $(this);
 						if ($this.data("state") == "show") {
 							$("#button").hide();
@@ -99,15 +100,19 @@
 							//Checks if the answer is correct, and if so it adds one to the total of correct answers
 							if (document.getElementById('answerTxt').value == text) {
 								answers++;
+								feedback.push("correct");
 								$("#answer").slideDown(function () {
 									$("#button").show();
 								});
 							}
 							else {
+								feedback.push("Incorrect");
 								$("#incorrect").slideDown(function () {
 									$("#button").show();
 								});
 							}
+							var filledAnswer = document.getElementById('answerTxt').value;
+							XTExitInteraction(x_currentPage, [$pageContents.data("current")], [text], [], [filledAnswer], feedback);
 							total++;
 
 							if ($pageContents.data("current") + 1 < $pageContents.data("captionInfo").length) {
@@ -215,6 +220,8 @@
 					.html('<img class="tick" src="' + x_templateLocation + 'common_html5/tick.png" alt="' + x_getLangInfo(x_languageData.find("tick")[0], "label", "Tick") + '">' + x_addLineBreaks(" Correct!"));
 
 			this.loadAudio($pageContents.data("captionInfo")[$pageContents.data("current")]);
+			var correctAnswer = $("<div/>").html($pageContents.data("captionInfo")[$pageContents.data("current")].answer).text().replace(/(\r\n|\n|\r)/gm,"");
+			XTEnterInteraction(x_currentPage, [$pageContents.data("current")], 'text', x_currentPageXML.getAttribute("text"),[] , [correctAnswer], ["Correct"]);
 		}
 
 		this.loadAudio = function(caption) {
@@ -258,10 +265,8 @@
 		}
 		//Stopping the tracking
 		this.finishTracking = function() {
-			var filledAnswer = document.getElementById('answerTxt').value;
-			var correctAnswer = $("<div/>").html($pageContents.data("captionInfo")[$pageContents.data("current")].answer).text().replace(/(\r\n|\n|\r)/gm,"");
-			XTExitInteraction(x_currentPage, 0,  filledAnswer);
 			XTSetPageScore(x_currentPage, ((answers * 100.0)/total));
+			console.log("PAGE!");
 		}
 		//Starting the tracking
 		this.initTracking = function() {
@@ -271,8 +276,6 @@
 				this.weighting = x_currentPageXML.getAttribute("trackingWeight");
 			}
 			XTSetPageType(x_currentPage, 'numeric', 1, this.weighting);
-			var correctAnswer = $("<div/>").html($pageContents.data("captionInfo")[$pageContents.data("current")].answer).text().replace(/(\r\n|\n|\r)/gm,"");
-			XTEnterInteraction(x_currentPage, 0, 'text', x_currentPageXML.getAttribute("text"), correctAnswer);
 		}
 	}
 
